Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.12.0, 0.13.0
-
None
Description
When I include two files with same namespace for go language:
include "common/Exceptions.thrift" include "common/Typedefs.thrift"
And generate it for golang in result in import I have import of this namespace twice:
import( "bytes" "context" "reflect" "fmt" "github.com/apache/thrift/lib/go/thrift" "my_namespace" "my_namespace" )
And when I try to use I have an error because of this:
"'my_namespace' redeclared as imported package name"
Attachments
Issue Links
- links to