THRIFT-5019: Duplicate imports from multiple includes from a namespace

If a thrift file includes two files from the same namespace into a
separate file, the generated Go code has duplicate imports for that
namespace. This fixes that.

Client: go